add openjfx modules
add TestPlayer (flac is not supported)